# zroute

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  build.zig  build.zig.zon  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  secrets.yml
src/: config.zig  main.zig  root.zig
src/proxy/: connection.zig  egress.zig  forward.zig  http_compat.zig  listener.zig  log.zig  pool.zig  relay.zig  resolver.zig  shutdown.zig  target.zig  timeout_reader.zig  tunnel.zig
src/telemetry/: metrics.zig  reporter.zig  span.zig  telemetry.zig
test/: conftest.py  e2e_test.py
